<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_above="@id/orderBook"
        android:layout_height="match_parent">
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:id="@+id/top"
          android:orientation="vertical"
          >
          <ImageView
              android:id="@+id/bookPicturemine"
              android:layout_width="150dp"
              android:layout_height="150dp"
              android:layout_marginTop="20dp"
              android:padding="10dp"
              android:layout_gravity="center"
              android:scaleType="fitXY"></ImageView>
          <View
              android:layout_width="match_parent"
              android:layout_height="1dp"
              android:layout_marginTop="15dp"
              android:background="@color/grey" />

          <TextView
              android:id="@+id/myBookTitlemine"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="10dp"
              android:fontFamily="sans-serif-light"
              android:text="@string/bookTitle"
              android:textColor="#000"
              android:textSize="15sp"
              android:textStyle="bold">

          </TextView>

          <TextView
              android:id="@+id/myBookAuthormine"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="5dp"
              android:fontFamily="sans-serif-light"
              android:text="@string/bookAuthor"
              android:textColor="#000"
              android:textSize="12sp">

          </TextView>

          <TextView
              android:id="@+id/myBookStatusmine"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="5dp"
              android:fontFamily="sans-serif-light"
              android:text="@string/bookStatus"
              android:textColor="#D30000"
              android:textSize="14sp">
          </TextView>

          <TextView
              android:id="@+id/myBookPricemine"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="5dp"
              android:fontFamily="sans-serif-light"
              android:text="@string/bookPrice"
              android:textColor="#923F3F"
              android:textSize="24sp"
              android:textStyle="bold"></TextView>

          <TextView
              android:id="@+id/myBookDescriptionmine"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="5dp"
              android:fontFamily="sans-serif-light"
              android:text="Description:"
              android:textColor="#000"
              android:textSize="15sp"
              android:textStyle="normal"></TextView>
      </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/orderBook"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_alignParentBottom="true"
        android:background="@drawable/custom_button"
        android:text="Order Now" />


</RelativeLayout>