<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="5dp"
    android:layout_weight="2"
    >


<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/top"
    >

        <ImageView
            android:id="@+id/bookPicture"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:padding="10dp"
            ></ImageView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_toEndOf="@id/bookPicture"
        android:orientation="vertical">

        <TextView
            android:id="@+id/myBookTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="sans-serif-light"
            android:text="Title: "
            android:textColor="#000000"
            android:textStyle="bold"
            android:textSize="15sp">

        </TextView>

        <TextView
            android:id="@+id/myBookAuthor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/bookAuthor"
            android:textColor="#000000"
            android:textSize="10sp"/>
        <TextView
            android:id="@+id/myBookStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/bookStatus"
            android:textColor="#D30000"
            android:textSize="14sp">

        </TextView>

        <TextView
            android:id="@+id/myBookPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/bookPrice"
            android:textStyle="bold"
            android:textColor="#923F3F"
            android:textSize="18sp"></TextView>

        <com.borjabravo.readmoretextview.ReadMoreTextView
            android:id="@+id/myBookDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="sans-serif-light"
            android:text="Description:"
            app:trimExpandedText="show more"
            app:trimCollapsedText="show less"
            app:trimMode="trimModeLength"
            app:trimLength="50"
            android:textColor="#000000"
            android:textSize="15sp"></com.borjabravo.readmoretextview.ReadMoreTextView>


    </LinearLayout>
</RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/top"
        android:layout_marginTop="10dp"
        android:background="@color/grey" />

</RelativeLayout>
